# baxter_throw

./: CMakeLists.txt  README.md  client_mod.py  dataTest.txt  data_Rikki.csv  generate_path.py  package.xml  set_catch_position.py  solve_linear_system.py  solve_system.py  throw_path.py
launch/: collision.launch  record_demo.launch  throw_demo.launch  throw_record.launch
src/: README.md  check_rrt_joint.py  check_rrt_joint_record.py  check_state_for_collisions.py  functions.py  generate_path.py  input_state.py  parse_text.py  path_smooth.py  pos_actual1.txt  pos_desired1.txt  projectile_solver.py  publish_block_pickup4.py  quat.py  recorder.sh  recorder1.sh  recorder2.sh  recorder3.sh  recorder4.sh  release_state_sample.py  release_state_solve.py  rrt.py  rrt_joint.py  rrt_joint_record.py  set_catch_position.py  solve_linear_system.py  solve_system.py  throw_path.py  throw_path_record.py  time1.txt  to do list  trajectory.nb
