<?xml version="1.0"?>
<package>

  <name>baxter_throw</name>
  <version>0.0.0</version>
  <description>The baxter_throw package</description>
  <maintainer email="rikkiirwin@gmail.com">rikki</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>baxter_interface</build_depend>
  <build_depend>urdf_parser</build_depend>
  <build_depend>pykdl_utils</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>baxter_interface</run_depend>
  <run_depend>urdf_parser</run_depend>
  <run_depend>pykdl_utils</run_depend>
  <run_depend>std_msgs</run_depend>

</package>